Fixed timer problem, But will need to fix it not disappearing when hp = 0 and making the lose text also disappear

--- a/style.css
+++ b/style.css
@@ -38,3 +38,15 @@
 #yan{
     display: none;
 }
+
+#safeTimerDisplay{
+    display: none;
+}
+
+#first-battle{
+    display: none;
+}
+
+#retry{
+    display:none;
+}
