Fixed the problems with the first battle for both timer display and resetting the hp valuye when trying again. Am now trying to figure out how to make one function to work for choosing your starter and it is not working.

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
   justify-content: space-around;
 }
 
-.starter-img{
+#starter-img{
     display: flex;
     justify-content: space-around;
 }
@@ -35,6 +35,15 @@
 #ches-choose{
     display: none;
 }
+
+#froakie-choose{
+    display: none;
+}
+
+#fenn-choose{
+    display: none;
+}
+
 #yan{
     display: none;
 }
