--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+
+body{display: flex;
+     justify-content: center;
+}
+
 #green{
     background-color: green;
     
@@ -85,5 +90,9 @@
 }
 
 #refuse_flare{
+    display: none;
+}
+
+#champion_pathway{
     display: none;
 }
